# turbodoc-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: main.rs
