[package]
name = "turbodoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
keyring = "2.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }

[[bin]]
name = "turbodoc"
path = "src/main.rs"

[[bin]]
name = "td"
path = "src/main.rs"
